--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -24,6 +24,7 @@
     <div class="wrapper">
         <main class="main">
             <h1>パスワード変更</h1>
+            <div class="form">
             <form action="" method="POST">
                 {{ form.non_field_errors }} 
                 {% block content %} 
@@ -46,6 +47,7 @@
                 <button class="decorated-btn" type="submit" class="btn btn-primary btn-block">送信</button></br><br>
                 <button class="decorated-btn" type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button> {% endblock %}
             </form>
+        </div>
         </main>
     </div>
     <footer class="footer">
