食材登録適用_1219

--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_register.html
@@ -56,6 +56,7 @@
         <table align="center">
             <form action="{% url 'food_register' %}" method="post">
                 {% csrf_token %}        
+                <p align="center">{{ form_food.as_table }}</p>     
                 <p align="center">{{ form_foodset.as_table }}</p>
                 <tr>
                     <td></td>
