--- a/syokuzai_tarou/accounts/templates/accounts/password_change.html
+++ b/syokuzai_tarou/accounts/templates/accounts/password_change.html
@@ -24,11 +24,12 @@
     <div class="wrapper">
         <main class="main">
             <h1>パスワード変更</h1>
-            <div class="form">
+           
             <form action="" method="POST">
                 {{ form.non_field_errors }} 
+                  <!--
                 {% block content %} 
-                <!--
+              
                 {% for field in form %}
 
                 <label class="col-6" for="{{ field.id_for_label }}">{{ field.label_tag }}</label> 
@@ -36,18 +37,45 @@
                 </br>
                 {% endfor %} 
             -->
+            <!--
             <p>古いパスワード</p>
             <p>{{ form.old_password }}</p>
             <p>新しいパスワード</p>
             <p>{{ form.new_password1 }}</p>
             <p>新しいパスワード（確認）</p>
             <p>{{ form.new_password2 }}</p>
+            -->
                 {% csrf_token %}
+                <div class="divTable">
+                    <div class="divTableBody">
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4>{{ form.old_password.label }} :</h4></div>
+                            <div class="divTableCell">{{ form.old_password }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4>{{ form.new_password1.label }} :</h4></div>
+                            <div class="divTableCell">{{ form.new_password1 }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4>{{ form.new_password2.label }} :</h4></div>
+                            <div class="divTableCell">{{ form.new_password2 }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"></div>
+                            <div class="divTableCell"><p align="right"><button class="decorated-btn" type="submit" class="btn btn-primary btn-block">送信</button></p></div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"></div>
+                            <div class="divTableCell"><p align="right"><button class="decorated-btn" type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button></p></div>
+                        </div>
+                    </div>
+                </div>
 
-                <button class="decorated-btn" type="submit" class="btn btn-primary btn-block">送信</button></br><br>
-                <button class="decorated-btn" type="submit" class="btn btn-primary btn-block" onClick="javascript:history.go(-1);">戻る</button> {% endblock %}
+                
+                <!--
+                    {% endblock %}
+                -->
             </form>
-        </div>
         </main>
     </div>
     <footer class="footer">
