--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -14,7 +14,11 @@
 
 <body>
     <header class="header">
-        <h1><a href="{% url 'refrigerator' %}"><p class="logo" alt="食材残さないよ太郎"></a></h1>
+        <h1>
+            <a href="{% url 'refrigerator' %}">
+                <p class="logo" alt="食材残さないよ太郎">
+            </a>
+        </h1>
         <nav class="global-nav">
             <ul>
                 <li class="nav-item active"><a href="{% url 'refrigerator' %}">ログイン</a></li>
@@ -25,26 +29,44 @@
     <div class="wrapper">
         <main class="main">
             <h1>新規登録</h1>
-            <form action="" method="POST">
+
+            <form  method="POST">
                 {% csrf_token %}
-                <p>
-                    {{ form.username }}</p>
-                <p style="margin:20px;">
-                    <p>
-                        {{ form.password1 }}</p>
-                    <p style="margin:20px;">
-                        <p>
-                            {{ form.password2 }}</p>
-                        <p style="margin:20px;">
-                            <p>パスワードは他の個人情報と似てはいけません。</p>
-                            <p style="margin:20px;">
-                                <p>パスワードは8文字以上にする必要があります。</p>
-                                <p style="margin:20px;">
-                                    <p>パスワードは、一般的に使用されるパスワードにすることはできません。</p>
-                                    <p style="margin:20px;">
-                                        <p>パスワードを完全に数字のみにすることはできません。</p>
-                                        <p style="margin:20px;">
-                                            <button class="decorated-btn" type="submit">Sign up</button>
+                <div class="divTable">
+                    <div class="divTableBody">
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4><p align="center">{{ form.username.label }} :</p></h4></div>
+                            <div class="divTableCell">{{ form.username }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4><p align="center">{{ form.password1.label }} :</p></h4></div>
+                            <div class="divTableCell">{{ form.password1 }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell"><h4><p align="center">{{ form.password2.label }} :</p></h4></div>
+                            <div class="divTableCell">{{ form.password2 }}</div>
+                        </div>
+                        <div class="divTableRow">
+                            <div class="divTableCell">
+                                <p style="margin:20px;"></p>
+                        <p>パスワードは他の個人情報と似てはいけません。</p>
+                        <p style="margin:20px;"></p>
+                        <p>パスワードは8文字以上にする必要があります。</p>
+                        <p style="margin:20px;"></p>
+                        <p>パスワードは、一般的に使用されるパスワードにすることはできません。</p>
+                        <p style="margin:20px;"></p>
+                        <p>パスワードを完全に数字のみにすることはできません。</p>
+                        <p style="margin:20px;"></p>
+                            </div>
+                           
+                        </div>
+                        
+                        <div class="divTableRow">
+                            <div class="divTableCell"></div>
+                            <div class="divTableCell"><p align="right"><button class="decorated-btn" type="submit">新規登録</button></p></div>
+                        </div>
+                    </div>
+                </div>
 
             </form>
 
