--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_change_select.html
@@ -49,6 +49,12 @@
                 <th></th>
                 <th>食材名</th>
             </tr>
+            {% for message in messages %}
+                    <li {% if message.tags %} class="{{ message.tags }}">
+                        {% endif %}
+                        {{ message }}
+                    </li>
+                    {% endfor %}
             <form action="{% url 'food_change_select'   %}" method="post">
                 {% csrf_token %}
                 <div class="scroll-table">
