フォームの見た目を整える_1220

--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -35,31 +35,18 @@
                 <div class="divTable">
                     <div class="divTableBody">
                         <div class="divTableRow">
-                            <div class="divTableCell"><h4><p align="center">{{ form.username.label }} :</p></h4></div>
+                            <div class="divTableCell"><h4>ユーザー名 :</h4></div>
                             <div class="divTableCell">{{ form.username }}</div>
                         </div>
                         <div class="divTableRow">
-                            <div class="divTableCell"><h4><p align="center">{{ form.password1.label }} :</p></h4></div>
+                            <div class="divTableCell"><h4>{{ form.password1.label }} :</h4></div>
                             <div class="divTableCell">{{ form.password1 }}</div>
                         </div>
                         <div class="divTableRow">
-                            <div class="divTableCell"><h4><p align="center">{{ form.password2.label }} :</p></h4></div>
+                            <div class="divTableCell"><h4>{{ form.password2.label }} :</h4></div>
                             <div class="divTableCell">{{ form.password2 }}</div>
                         </div>
-                        <div class="divTableRow">
-                            <div class="divTableCell">
-                                <p style="margin:20px;"></p>
-                        <p>パスワードは他の個人情報と似てはいけません。</p>
-                        <p style="margin:20px;"></p>
-                        <p>パスワードは8文字以上にする必要があります。</p>
-                        <p style="margin:20px;"></p>
-                        <p>パスワードは、一般的に使用されるパスワードにすることはできません。</p>
-                        <p style="margin:20px;"></p>
-                        <p>パスワードを完全に数字のみにすることはできません。</p>
-                        <p style="margin:20px;"></p>
-                            </div>
-                           
-                        </div>
+                     
                         
                         <div class="divTableRow">
                             <div class="divTableCell"></div>
@@ -67,6 +54,17 @@
                         </div>
                     </div>
                 </div>
+            
+                    <p style="margin:20px;"></p>
+                    <p>パスワードは他の個人情報と似てはいけません。</p>
+                    <p style="margin:20px;"></p>
+                    <p>パスワードは8文字以上にする必要があります。</p>
+                    <p style="margin:20px;"></p>
+                    <p>パスワードは、一般的に使用されるパスワードにすることはできません。</p>
+                    <p style="margin:20px;"></p>
+                    <p>パスワードを完全に数字のみにすることはできません。</p>
+                    <p style="margin:20px;"></p>
+                 
 
             </form>
 
