--- a/syokuzai_tarou/accounts/templates/registration/login.html
+++ b/syokuzai_tarou/accounts/templates/registration/login.html
@@ -33,12 +33,12 @@
                 <div class="divTable">
                     <div class="divTableBody">
                         <div class="divTableRow">
-                            <div class="divTableCell"><h4><p align="center">{{ form.username.label }} :</p></h4></div>
-                            <div class="divTableCell"><h4>{{ form.username }}</h4></div>
+                            <div class="divTableCell"><h4>{{ form.username.label }} :</h4></div>
+                            <div class="divTableCell">{{ form.username }}</div>
                         </div>
                         <div class="divTableRow">
-                            <div class="divTableCell"><h4><p align="center">{{ form.password.label }} :</p></h4></div>
-                            <div class="divTableCell"><h4>{{ form.password }}</h4></div>
+                            <div class="divTableCell"><h4>{{ form.password.label }} :</h4></div>
+                            <div class="divTableCell">{{ form.password }}</div>
                         </div>
                         
                         <div class="divTableRow">
