--- a/syokuzai_tarou/refrigerator/static/refrigerator/css/deco_btn.css
+++ b/syokuzai_tarou/refrigerator/static/refrigerator/css/deco_btn.css
@@ -21,3 +21,23 @@
     color: #fff;
     text-decoration: none;
 }
+
+.intro-btn{
+    position: absolute;
+    top: 130px; right: 20px;
+    /*top: 10; right: 0; bottom: 10; left: 20;*/
+    margin-top: 15px;
+    width: 120px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 1.3rem;
+    letter-spacing: 1px;
+    transition: 0.15s;
+    background-color: #567947;
+    border: 0px solid #567947;
+    -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+}
