--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_search.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{% static 'refrigerator/css/hamburger.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <!--intro.jsの読み込み-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.1.0/intro.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.1.0/introjs.min.css" rel="stylesheet" type="text/css">
     <title>{{title}}</title>
 </head>
 
@@ -53,14 +56,14 @@
                 <div class="serach-formTable">
                     <div class="serach-formTableBody">
                         <div class="serach-formTableRow">
-                            <div class="serach-formTableCell"><p align="left">{{form.search}}</p></div>
-                            <div class="serach-formTableCell"><p align="left"><input class="decorated-btn" type="submit" value="検索"></h3></p></div>
+                            <div class="serach-formTableCell" data-intro="検索ワードを入力" data-step="1"><p align="left">{{form.search}}</p></div>
+                            <div class="serach-formTableCell"><p align="left"><input class="decorated-btn" type="submit" value="検索" data-intro="検索ボタンを押して" data-step="2"></h3></p></div>
                         </div>
                     </div>
                 </div>
             </form> 
       
-            <div class="scroll-table">
+            <div class="scroll-table" data-intro="ここに結果が表示されるよ" data-step="3">
                 <table class="osare-table col5t">    
             <tr>
             <thead>
@@ -75,10 +78,16 @@
                     <td>{{ item.foodset.food }}</td>
                     <td>{{ item.foodset.foodGram }} [{{ item.foodset.volume }}]</td>
                     <td>{{ item.foodset.str_limitRegister }}</td>   
-            </tr>
+                </tr>
             {% endfor %}
         </table>
     </div>
+    <input class="intro-btn" type="button" value="この機能の使い方" onclick="buttonClick()">
+    <script type="text/javascript">
+        function buttonClick(){
+            introJs().start();
+        }
+    </script>
     </main>
     </div>
     <footer class="footer">
