--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -44,7 +44,7 @@
     <div class="wrapper">
        <main class="main">
         <a>レシピ表示ページ</a>
-        <form action="{% url 'recipe' %}" method="post" >
+        <form  method="post" >
             {%  csrf_token %}
             <div class="scroll-table">
                 <table class="osare-table col5t">  
