--- a/syokuzai_tarou/recipe/templates/recipe/recipe.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe.html
@@ -43,7 +43,7 @@
     <div class="wrapper">
        <main class="main">
         <a>レシピ表示ページ</a>
-        <!--<p>param1の中身:{{param1}}</p>-->
+        <p>param1の中身:{{param1}}</p>
         <!--<p>URL:{{text}}</p>-->
         {% for names,links in link_list%}
            <!--<p>{{names}}{{links}}</p>-->
