--- a/syokuzai_tarou/recipe/templates/recipe/recipe.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe.html
@@ -43,14 +43,29 @@
     <div class="wrapper">
        <main class="main">
         <a>レシピ表示ページ</a>
-        <p>param1の中身:{{param1}}</p>
-        <!--<p>URL:{{text}}</p>-->
-        {% for names,links in link_list%}
-           <!--<p>{{names}}{{links}}</p>-->
-           <p>{{names}}:<a href="{{links}}">{{links}}</a></p>
-        {% endfor %}
-        
-
+        <form  method="post" >
+            {%  csrf_token %}
+            <h3>{{param1}}を使用したレシピ検索結果</h3>
+            <div class="scroll-table">
+                    <!--<p>URL:{{text}}</p>-->
+                <!--<li>-->
+                {% for names,links,image in link_list%}
+                    <!--<p>{{names}}{{links}}</p>-->
+                    <div class="recipe" style=height:125px>
+                        <div class="recipe" align="left">
+                            <image align="left" src={{image}} width=180 height=120></image>
+                        </div>
+                        <div class="recipe" align="center">
+                            <h4>{{names}}</h4>
+                            <a  href="{{links}}">{{links}}</a>
+                        </div>
+                    </div>
+                   
+                {% endfor %}
+                <!--</li>-->
+            </div>
+            <input class="decorated-btn" type="submit" value="検索し直す">
+        </form>
     </main>
     </div>
     <footer class="footer">
