--- a/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/calender.html
@@ -18,6 +18,7 @@
 <!--intro.jsの読み込み-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.1.0/intro.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.1.0/introjs.min.css" rel="stylesheet" type="text/css">
+<link href="https://stonly.com/guide/ja/syokuzai-iz5TxkurLo/Steps/">
 </head>
 
 <body>
@@ -61,6 +62,7 @@
                 }
             </script>
         </table>
+        <iframe id="ston-iz5TxkurLo" width="100%" height="700" frameBorder="0" name="StonlyExplanation" allowfullscreen src="https://stonly.com/embed/ja/iz5TxkurLo/view/"> </iframe>
     </main>
     </div>
 
