レシピ表示変更_20210107

--- a/syokuzai_tarou/recipe/templates/recipe/recipe.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="recipe" align="center">
                             <h4>{{names}}</h4>
-                            <a  href="{{links}}">{{links}}</a>
+                            <a  href="{{links}}"  target="_blank" rel="noopener noreferrer">{{links}}</a>
                         </div>
                     </div>
                    
