いらない所削除_20210107

--- a/syokuzai_tarou/accounts/templates/accounts/signup.html
+++ b/syokuzai_tarou/accounts/templates/accounts/signup.html
@@ -5,8 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SIGN UP</title>
-    <link rel="stylesheet" href="{% static 'refrigerator/css/reset.css' %}" />
+    <title>アカウント新規作成</title>
     <link rel="stylesheet" href="{% static 'refrigerator/css/table.css' %}" />
     <link rel="stylesheet" href="{% static 'refrigerator/css/deco_btn.css' %}" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
