--- a/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
+++ b/syokuzai_tarou/recipe/templates/recipe/recipe_select.html
@@ -49,6 +49,7 @@
         <a>レシピ表示ページ</a>
         <form  method="post" >
             {%  csrf_token %}
+            <h3><p align="left">使いたい食材を複数選択可能です。</p></h3>
             <div data-intro="使いたい食材にチェックを付けて" data-step="1" class="scroll-table">
                 <table class="osare-table col5t">  
                 <tr>
