--- a/syokuzai_tarou/refrigerator/templates/refrigerator/food_delete.html
+++ b/syokuzai_tarou/refrigerator/templates/refrigerator/food_delete.html
@@ -54,6 +54,7 @@
 <div class="wrapper">
    <main class="main">
     <a>食材削除ページ</a>
+    <h3><p align="left">削除したい食材を複数選択可能です。</p></h3>
     {% for message in messages %}
                     <li {% if message.tags %} class="{{ message.tags }}">
                         {% endif %}
@@ -87,9 +88,6 @@
                 introJs().start();
             }
         </script>
-        <!--
-        <input class="decorated-btn" type="submit" value="食材削除">
-        -->
         <!-- モーダルを開くボタン・リンク -->
         <button type="button" class="decorated-btn" data-toggle="modal" data-target="#testModal" data-intro="削除ボタンを押そう!!<br>確認画面が出たら「削除」を押して削除完了" data-step="2">食材削除</button>
         
@@ -106,9 +104,6 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
                         <button type="submit" class="btn btn-danger">削除</button>
-                        <!--
-                        <input class="decorated-btn" type="submit" value="削除">
-                        -->
                     </div>
                 </div>
             </div>
